--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -68,7 +68,6 @@ ul{
     grid-template-columns: auto auto;
     padding: 10px;
     grid-template-areas:
-    "proj-title proj-title"
     "proj1-display proj2-display"
     "proj3-display proj4-display";
 }
@@ -243,58 +242,22 @@ ul{
   .fa-twitter{color: white;}  
   .fa-instagram{color: white;}
 
+  
 
+  @media all and (max-width: 600px) {
 
-  @media only screen and (max-width: 768px) {
-
-    #navbar{
-
-        float: right;
-        position: fixed;
-        margin:10px;
-        background: transparent;
-        text-align: center;
+  
+    #proj-table{
+       
+        grid-gap: 5px;
+        grid-template-rows: 200px;
+        grid-template-columns: 400px;
+        grid-template-areas:
+        "proj1-display" 
+        "proj2-display"
+        "proj3-display" 
+        "proj4-display";
         
     }
-    
-    
-    /* 3 dots*/
-    .nav-dots{
-        margin-top: 5px;
-       
-    }
-    .nav-icon{
-        display: inline-flex;
-        width: 6px;
-        height: 6px;
-        border-radius: 25px;
-        background-color: #f62a00;
-        margin-left:1px;
-        margin-right: 1px;
-        margin-bottom: 15px;
-    }
-    
-    ul{
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        font-size: 20px;
-      }
-
-      /* navigation icons*/
-.fa-home, .fa-user, .fa-envelope {
-    color: #f62a00;
-    margin-bottom: 10px;
+  
 }
-
-    #headline h1{
-    
-        font-family: 'Paytone One', sans-serif;
-        margin: 0px 0px;
-        font-size: 48px;
-        color: #f62a00;
-    }
-  
-  
-  
-  }
