--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -259,7 +259,8 @@ ul{
 
   
     #proj-table{
-       
+        display: grid;
+        justify-content:center;
         grid-gap: 5px;
         grid-template-rows: 200px;
         grid-template-columns: 400px;
