--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -271,5 +271,27 @@ ul{
         "proj4-display";
         
     }
+
+    #proj1-display{
+        grid-area: proj1-display;
+        background-color: #f1f3ce;
+        ;
+       
+    }
+    #proj2-display{
+        grid-area: proj2-display;
+        background-color: #f1f3ce;
+      
+    }
+    #proj3-display{
+        grid-area: proj3-display;
+        background-color: #f1f3ce;
+       
+    }
+    #proj4-display{
+        grid-area: proj4-display;
+        background-color: #f1f3ce;
+       
+    }
   
 }
