--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -243,14 +243,18 @@ ul{
   .fa-twitter{color: white;}  
   .fa-instagram{color: white;}
 
-  @media all and (max-width: 768px){
+  
+/*----------------------------------------------------------*/
+  
+  /* Mobile Portrait */
+  @media only screen and (max-width: 600px) {
 
  
     #navbar{
 
         float: right;
         position: fixed;
-        margin:10px;
+        margin:5px;
         background: transparent;
         text-align: center;
         
@@ -290,7 +294,7 @@ ul{
     }
 
     #content1{
-        height: 80vh;
+        height: 85vh;
      }
 
 
@@ -320,7 +324,7 @@ ul{
     #headline h1{
         font-family: 'Paytone One', sans-serif;
         margin: 0px 0px;
-        font-size: 48px;
+        font-size: 42px;
         color: #f62a00;
     }
 
@@ -346,8 +350,8 @@ ul{
     
     #intro{
         top:15vh;
-        padding-left:60px;
-        padding-right: 60px;
+        padding-left:50px;
+        padding-right: 50px;
     }
 
     #intro-txt p{
@@ -356,7 +360,7 @@ ul{
     }
 
     #content2{
-        height: 130vh;
+        height: 140vh;
     }
 
     #work-title{
@@ -371,7 +375,7 @@ ul{
 
   #proj-table{
     grid-template-rows: 180px 180px 180px 180px;
-    grid-template-columns: 380px;
+    grid-template-columns: 300px;
     grid-template-areas:
     "proj1-display" 
     "proj2-display"
@@ -386,3 +390,292 @@ ul{
   
 
 }
+
+/*------------------------------------------------------------------*/
+/* Mobile Landscape */
+
+@media only screen and (min-width: 600px){
+
+
+    #navbar{
+
+        float: right;
+        position: fixed;
+        margin:5px;
+        background: transparent;
+        text-align: center;
+        
+    }
+    
+    
+    /* 3 dots*/
+    .nav-dots{
+        margin-top: 10px;
+       
+    }
+    .nav-icon{
+        display: inline-flex;
+        width: 6px;
+        height: 6px;
+        border-radius: 20px;
+        background-color: #f62a00;
+        margin-left:1px;
+        margin-right: 1px;
+        margin-bottom: 8px;
+    }
+    
+    ul{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        font-size: 28px;
+      }
+    
+    
+    /* navigation icons*/
+    .fa-home, .fa-user, .fa-envelope {
+        color: #f62a00;
+        margin-bottom: 10px;
+       
+       
+    }
+
+    #content1{
+        height: 125vh;
+     }
+
+
+    #herobg{
+        height:70vh;
+        background-color: #00293c;
+    }
+
+    #hero-image-table{
+       
+        display: grid;
+        min-height: 300px;
+        height: 40vh;
+        border-style: solid;
+        border-color: black;
+        grid-template-rows: 40vh 30vh 20vh;
+        grid-template-areas:
+        "hero-title"
+        "profile-image"
+        "intro";
+    }
+
+    #hero-title{
+        top: 70px;
+    }
+
+    #headline h1{
+        font-family: 'Paytone One', sans-serif;
+        margin: 0px 0px;
+        font-size: 44px;
+        color: #f62a00;
+    }
+
+    #headline p{
+        text-align: center;
+        font-size: 18px;
+        margin: 0px 0px;
+        font-family: 'Quicksand', sans-serif;
+        color: white;
+        padding:10px;
+    }
+
+    
+    #profile-image{
+        top:25vh;
+    }
+    .profile-img{
+        height:130px;
+        width:130px;
+        border-radius: 100%;
+    }
+
+    
+    #intro{
+        top:25vh;
+        padding-left:50px;
+        padding-right: 50px;
+    }
+
+    #intro-txt p{
+        font-family: 'Quicksand', sans-serif;
+        font-size: 16px;
+    }
+
+    #content2{
+        height: 140vh;
+    }
+
+    #work-title{
+        font-family: 'Quicksand', sans-serif;
+        font-size: 24px;
+        color: #f62a00;
+        text-align: center;
+        margin-bottom: 50px;
+        margin-top: 10px;
+    
+  }
+
+  #proj-table{
+    grid-template-rows: 180px 180px;
+    grid-template-columns: 300px 300px;
+    grid-template-areas:
+    "proj1-display proj2-display"
+    "proj3-display proj4-display";
+    
+}
+
+.proj-content-area{
+    font-size: 20px;
+   }
+}
+
+/*------------------------------------------------------------------*/
+/* Tablet Landscape */
+
+@media only screen and (min-width: 768px){
+
+
+    #navbar{
+
+        float: right;
+        position: fixed;
+        margin:30px;
+        background: transparent;
+        text-align: center;
+        
+    }
+    
+    
+    /* 3 dots*/
+    .nav-dots{
+        margin-top: 10px;
+       
+    }
+    .nav-icon{
+        display: inline-flex;
+        width: 8px;
+        height: 8px;
+        border-radius: 20px;
+        background-color: #f62a00;
+        margin-left:1px;
+        margin-right: 1px;
+        margin-bottom: 15px;
+    }
+    
+    ul{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        font-size: 38px;
+      }
+    
+    
+    /* navigation icons*/
+    .fa-home, .fa-user, .fa-envelope {
+        color: #f62a00;
+        margin-bottom: 15px;
+       
+       
+    }
+
+    #content1{
+        height: 120vh;
+     }
+
+
+    #herobg{
+        height:60vh;
+        background-color: #00293c;
+    }
+
+    #hero-image-table{
+       
+        display: grid;
+        min-height: 300px;
+        height: 40vh;
+        border-style: solid;
+        border-color: black;
+        grid-template-rows: 40vh 30vh 20vh;
+        grid-template-areas:
+        "hero-title"
+        "profile-image"
+        "intro";
+    }
+
+    #hero-title{
+        top: 140px;
+    }
+
+    #headline h1{
+    
+        font-family: 'Paytone One', sans-serif;
+        margin: 0px 0px;
+        font-size: 72px;
+        color: #f62a00;
+    }
+    
+
+    #headline p{
+        text-align: center;
+        font-size: 24px;
+        margin: 0px 0px;
+        font-family: 'Quicksand', sans-serif;
+        color: white;
+        padding:10px;
+    }
+
+    
+    #profile-image{
+        top:28vh;
+    }
+    .profile-img{
+        height:180px;
+        width:180px;
+        border-radius: 100%;
+    }
+
+    
+    #intro{
+        top:35vh;
+        padding-left:40px;
+        padding-right: 40px;
+    }
+
+    #intro-txt p{
+        font-family: 'Quicksand', sans-serif;
+        font-size: 22px;
+    }
+
+    #content2{
+        height: 110vh;
+    }
+
+    #work-title{
+        font-family: 'Quicksand', sans-serif;
+        font-size: 28px;
+        color: #f62a00;
+        text-align: center;
+        margin-bottom: 50px;
+        margin-top: 10px;
+    
+  }
+
+  #proj-table{
+    grid-template-rows: 280px 280px;
+    grid-template-columns: 450px 450px;
+    grid-template-areas:
+    "proj1-display proj2-display"
+    "proj3-display proj4-display";
+    
+}
+
+.proj-content-area{
+    font-size: 20px;
+   }
+}
+
